--- a/ProductManagement/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/ProductManagement/WebApplication1/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Update">Update Product</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Delete">Delete Product</a>
+                        </li>
                     </ul>
                 </div>
             </div>
