--- a/StudentSolution/StudentManagementSystem/Views/Student/AddStudent.cshtml
+++ b/StudentSolution/StudentManagementSystem/Views/Student/AddStudent.cshtml
@@ -1,11 +1,11 @@
 ﻿<form action="/student/addstudent" method="post">
-  <input type="text" name="studid" /> <br />
-  <input type="text" name="studname" /><br />
-  <input type="text" name="studemail" /><br />
-  <input type="text" name="studmob" /><br />
-  <input type="text" name="studaddr" /> <br />
-  <input type="text" name="addate" /><br />
-  <input type="text" name="fees"/><br />
-  <input type="text" name="status" /><br />
-  <input type="submit" value="Add Student" />
+ ID:            <input type="text" name="studid" /> <br />
+ Name:          <input type="text" name="studname" /><br />
+ Email          <input type="text" name="studemail" /><br />
+ Mobile:        <input type="text" name="studmob" /><br />
+ Address:       <input type="text" name="studaddr" /> <br />
+ Admission Date:<input type="text" name="addate" /><br />
+ Fees:          <input type="text" name="fees"/><br />
+ Status:        <input type="text" name="status" /><br />
+                <input type="submit" value="Add Student" />
 </form>
